--- a/lab1_Backpropagation/Exercise_0101 - Numpy.ipynb
+++ b/lab1_Backpropagation/Exercise_0101 - Numpy.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "272e1b50",
    "metadata": {},
    "source": [
     "<center><h1 style=\"font-size:40px;\">Exercise I:<br> Backpropagation in Numpy\n",
@@ -12,6 +13,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e887d46c",
    "metadata": {},
    "source": [
     "Welcome to the first lab for Deep Learning!\n",
@@ -28,6 +30,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "abd10e95",
    "metadata": {},
    "source": [
     "## Neuron\n",
@@ -40,6 +43,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe07cc26",
    "metadata": {},
    "source": [
     "## MLP\n",
@@ -51,6 +55,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d4cb6fb6",
    "metadata": {},
    "source": [
     "## Imports"
@@ -58,13 +63,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "14b78c2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "\n",
     "from sklearn.datasets import load_digits\n",
     "from sklearn import preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -75,6 +93,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fd693c15",
    "metadata": {},
    "source": [
     "# Load dataset\n",
@@ -84,6 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2e394f21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "395ff737",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +134,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6097aa8b",
    "metadata": {},
    "source": [
     "# Implement Neural network\n",
@@ -121,6 +143,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53b5ad86",
    "metadata": {},
    "source": [
     "## Predefined settings\n",
@@ -135,6 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c473687c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,6 +171,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9281650c",
    "metadata": {},
    "source": [
     "## One-hot encoding\n",
@@ -156,6 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fc5f44d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +191,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b567af0",
    "metadata": {},
    "source": [
     "## Activation function\n",
@@ -197,6 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7c0ea2c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,6 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1dae47a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,6 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "69ce9cdd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,6 +261,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "362e211f",
    "metadata": {},
    "source": [
     "To test the models. Run the following code and see if the plot is the same as the expected result."
@@ -239,6 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7c8a90c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,6 +282,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5ec354ad",
    "metadata": {},
    "source": [
     "### Expected result - sigmoid and dsigmoid\n",
@@ -258,6 +291,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a48471c",
    "metadata": {},
    "source": [
     "### Test Softmax\n",
@@ -267,6 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fddcab68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,6 +315,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e2ef6455",
    "metadata": {},
    "source": [
     "## Loss function.\n",
@@ -292,6 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "775631a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,6 +340,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e0a3fda",
    "metadata": {},
    "source": [
     "### Test nll\n",
@@ -312,6 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c48b24d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +364,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8bfda118",
    "metadata": {},
    "source": [
     "## Feedforward\n",
@@ -346,6 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b71b8f34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,6 +403,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "469a1ffc",
    "metadata": {},
    "source": [
     "## Init weights\n",
@@ -376,6 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f9dc9d8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,6 +430,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6411c7fc",
    "metadata": {},
    "source": [
     "## Backpropagation\n",
@@ -425,6 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5ab5e314",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,6 +484,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "436463da",
    "metadata": {},
    "source": [
     "## SGD\n",
@@ -450,6 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "13fe6ed5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,6 +511,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea60dacb",
    "metadata": {
     "tags": []
    },
@@ -475,6 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3b646de9",
    "metadata": {
     "tags": []
    },
@@ -486,6 +535,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e2b2fba",
    "metadata": {},
    "source": [
     "## Predict\n",
@@ -495,6 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fb8579e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,6 +555,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b723ae47",
    "metadata": {},
    "source": [
     "## Metric\n",
@@ -513,6 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6bc388bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,6 +575,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "63d74d9e",
    "metadata": {},
    "source": [
     "## Neural network\n",
@@ -531,6 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6fd70394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,6 +623,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86eb73bd",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -577,6 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6f918374",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,6 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "14333161",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,6 +664,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca18688c",
    "metadata": {},
    "source": [
     "## Visualize the result\n",
@@ -615,6 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a102c476",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,6 +692,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2b856d2d",
    "metadata": {},
    "source": [
     "**Question:** Can the result be improved? \\\n",
@@ -641,6 +702,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c780c33",
    "metadata": {},
    "source": [
     "## End\n",
@@ -650,9 +712,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "labs_new",
    "language": "python",
-   "name": "python3"
+   "name": "labs_new"
   },
   "language_info": {
    "codemirror_mode": {
@@ -664,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
