--- a/lab1_Backpropagation/Exercise_0101 - Numpy.ipynb
+++ b/lab1_Backpropagation/Exercise_0101 - Numpy.ipynb
@@ -501,12 +501,7 @@
    "outputs": [],
    "source": [
     "def SGD(x, y, learning_rate):\n",
-    "    # TODO\n",
-    "    grads = grad_loss(x, y)\n",
-    "    W_h = W_h - learning_rate * grads[\"W_h\"]\n",
-    "    b_h = b_h - learning_rate * grads[\"b_h\"]\n",
-    "    W_o = W_o - learning_rate * grads[\"W_o\"]\n",
-    "    b_o = b_o - learning_rate * grads[\"b_o\"]"
+    "    # TODO"
    ]
   },
   {
