--- a/lab2_MLP_Classification/MLP.ipynb
+++ b/lab2_MLP_Classification/MLP.ipynb
@@ -270,7 +270,7 @@
     "                hidden_nodes=1,                     \n",
     "                out_dimension=None,\n",
     "            ):\n",
-    "        super(MLP, self).__init__()\n",
+    "        super(NeuralNet, self).__init__()\n",
     "        self.fc1 = torch.nn.Linear(in_dimension, hidden_nodes)\n",
     "        self.relu = torch.nn.Tanh()\n",
     "        self.fc2 = torch.nn.Linear(hidden_nodes, out_dimension)\n",
@@ -899,7 +899,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_decision_boundary(dataset, model, steps=50):\n",
+    "def plot_decision_boundary(dataset,y, model, steps=50):\n",
     "    \n",
     "    xmin, xmax = dataset[:, 0].min(), dataset[:, 0].max()\n",
     "    ymin, ymax = dataset[:, 1].min() , dataset[:, 1].max()\n",
@@ -938,7 +938,7 @@
     "    A = ['MSE', 'CorrCoeff']\n",
     "    model.eval()\n",
     "    preds = model(x)\n",
-    "    pcorr = np.corrcoef(y, preds.detach().numpy().flatten())\n",
+    "    pcorr = np.corrcoef(y.flatten(), preds.detach().numpy().flatten())\n",
     "    mse = torch.nn.MSELoss()(preds,y)\n",
     "\n",
     "    B = [mse.item(), pcorr]\n",
