--- a/lab4_Segmentation/Segment.ipynb
+++ b/lab4_Segmentation/Segment.ipynb
@@ -97,7 +97,7 @@
    "source": [
     "class SimpleModel(nn.Module):\n",
     "    def __init__(self, num_classes:int=3,input_shape=(10,10),**kwargs):\n",
-    "        super().__init__()\n",
+    "        super(SimpleModel, self).__init__()\n",
     "        \n",
     "        ## Encoder\n",
     "        self.conv1 = self.Encoder(num_classes, 32, 7, 3)\n",
@@ -230,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
