--- a/lab3_Classification/Classif.ipynb
+++ b/lab3_Classification/Classif.ipynb
@@ -20,9 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'imageio'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/rk/83zd6tln1ddgrjv9gqzf3dxc0000gn/T/ipykernel_26480/2103140641.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mimageio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorchvision\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'imageio'"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch import nn\n",
@@ -44,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +236,7 @@
     "    :param nrows:int:  (Default value = 2)\n",
     "\n",
     "    \"\"\"\n",
+    "    data = data.permute(0,2,3,1)\n",
     "    image_ratio = data[0].shape[0] /data[0].shape[1]\n",
     "    if len(data)< nimages:\n",
     "        nimages = len(data)\n",
@@ -236,7 +249,7 @@
     "    fig = plt.figure(figsize=(fig_dimension*columns,1.4*fig_dimension*nrows*image_ratio))\n",
     "    for i in range(0, nimages):\n",
     "        ax = fig.add_subplot(nrows, columns, i+1)\n",
-    "        ax.imshow(data[i]/255)\n",
+    "        ax.imshow(data[i])\n",
     "        ax.set_xlabel(f\"{label_prefix}{labels[i]}\") if labels is not None else None\n",
     "        ax.set_xticks([])\n",
     "        ax.set_yticks([])\n",
